gitops/platform/renovate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: renovate
  labels:
    app.kubernetes.io/name: renovate
    app.kubernetes.io/part-of: infrastructure
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
